# fastapi_sqlmodel_graphql

./: .gitignore  Dockerfile  README.md  database.py  hero.py  main.py  pyproject.toml  query.py  resolver.py
.devcontainer/: devcontainer.json  postCreateCommand.sh
